--- a/webui/templates/address.jinja2
+++ b/webui/templates/address.jinja2
@@ -6,99 +6,6 @@
 
 {% block content %}
 
-    <div class="content">
-
-        <div id="header">
-            <h3>Address {{ address_trunc }}</h3>
-        </div>
-
-        <div id="data">
-            <h4>Overview</h4>
-        {% call data_line("Address") %}
-            <span class="mono">{{ address }}</span>
-        {% endcall %}
-        {% if not "DEBUG_SKIP_COINBASE" | get_env %}
-            {% call data_line_safe("Total incentive reward (<span data-tooltip title=\"Testnet3 credits earned during incentive period (since block 130888). Divide by 5 to get converted mainnet reward amount.\">?</span>)") %}
-                {{ total_incentive | format_aleo_credit | safe }} (Mainnet reward: {{ (total_incentive // 5) | format_aleo_credit | safe }})
-            {% endcall %}
-            {% call data_line_safe("Total coinbase reward (<span data-tooltip title=\"Testnet3 credits earned since the start of the network.\">?</span>)") %}
-                {{ total_rewards | format_aleo_credit | safe }}
-            {% endcall %}
-            {% call data_line("Solutions found") %}
-                {{ total_solutions }}
-            {% endcall %}
-        {% endif %}
-        {% call data_line("Programs deployed") %}
-            {{ total_programs }}
-        {% endcall %}
-        {% if not "DEBUG_SKIP_COINBASE" | get_env %}
-            {% call data_line("Estimated speed") %}
-                {% if speed != 0 %}
-                {{ "%.2f" % speed }} <span data-tooltip title='commitments per second, also known as "p/s" or "s/s"'>c/s</span> (last {{ timespan }})
-                {% else %}
-                Not enough solutions during last day
-                {% endif %}
-            {% endcall %}
-        {% endif %}
-        </div>
-
-        {% if not "DEBUG_SKIP_COINBASE" | get_env %}
-        <div id="solutions">
-            <h4>Accepted solutions</h4>
-            <table class="unstriped">
-                <thead>
-                <tr>
-                    <th>Block</th>
-                    <th>Epoch</th>
-                    <th>Timestamp</th>
-                    <th>Nonce</th>
-                    <th>Target / Total</th>
-                    <th>Reward</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for solution in solutions %}
-                    <tr>
-                        <td><a href="/block?h={{ solution.height }}">{{ solution.height | format_number | safe }}</a></td>
-                        <td>{{ solution.height // 256 }}</td>
-                        <td>{{ solution.timestamp | format_time | safe }}</td>
-                        <td>{{ solution.nonce }}</td>
-                        <td>{{ solution.target | format_number | safe }}<span class="note"> / {{ solution.target_sum | format_number | safe }}</span></td>
-                        <td>{{ solution.reward | format_aleo_credit | safe }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-            {% if total_solutions > 30 %}
-            <a href="/address_solution?a={{ address }}">Show all accepted solutions</a>
-            {% endif %}
-        </div>
-        {% endif %}
-
-        <div id="programs">
-            <h4>Deployed programs</h4>
-            <table class="unstriped">
-                <thead>
-                <tr>
-                    <th>Program</th>
-                    <th>Block</th>
-                    <th>Timestamp</th>
-                    <th>Transaction ID</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for program in programs %}
-                    <tr>
-                        <td><a href="/program?id={{ program.program_id }}">{{ program.program_id }}</a></td>
-                        <td><a href="/block?h={{ program.height }}">{{ program.height | format_number | safe }}</a></td>
-                        <td>{{ program.timestamp | format_time | safe }}</td>
-                        <td><a href="/transaction?id={{ program.transaction_id }}">{{ program.transaction_id }}</a></td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-
-    </div>
+{% include "htmx/address.jinja2" %}
 
 {% endblock %}
