--- a/webui/templates/block.jinja2
+++ b/webui/templates/block.jinja2
@@ -2,140 +2,8 @@
 
 {% block title %}Block {{ block.header.metadata.height }} - Haruka's Aleo Explorer{% endblock %}
 
-{% from "macros.jinja2" import data_line, state_label %}
-
 {% block content %}
 
-    <div class="content">
-
-        <div id="header">
-            <h3>Block {{ block.header.metadata.height | format_number | safe }}</h3>
-        </div>
-
-        <div id="data">
-        {% call data_line("Height") %}
-            {{ block.header.metadata.height | format_number | safe }}
-        {% endcall %}
-        {% call data_line("Epoch") %}
-            {{ block.header.metadata.height // 256 }} <span class="note">{{ block.header.metadata.height % 256 }} / 256</span>
-        {% endcall %}
-        {% call data_line("Timestamp") %}
-            {{ block.header.metadata.timestamp | format_time | safe }}
-        {% endcall %}
-        {% call data_line("Coinbase target") %}
-            {{ block.header.metadata.coinbase_target | format_number | safe }}
-        {% endcall %}
-        {% call data_line("Proof target") %}
-            {{ block.header.metadata.proof_target | format_number | safe }}
-        {% endcall %}
-        {% call data_line("Cumulative weight") %}
-            {{ block.header.metadata.cumulative_weight | format_number | safe }}
-        {% endcall %}
-        {% call data_line("Cumulative proof target") %}
-            {{ block.header.metadata.cumulative_proof_target | format_number | safe }}
-        {% endcall %}
-        {% call data_line("Coinbase reward") %}
-            {% if coinbase_reward %}{{ (coinbase_reward // 2) | format_aleo_credit | safe }}{% else %}-{% endif %}
-        {% endcall %}
-        {% call data_line("Total fee") %}
-            {{ total_fee | format_aleo_credit | safe }} Aleo credits
-        {% endcall %}
-        {% call data_line("Total supply") %}
-            {{ block.header.metadata.total_supply_in_microcredits | format_aleo_credit | safe }} Aleo credits
-        {% endcall %}
-        {% call data_line("Block hash") %}
-            <span class="mono">{{ block.block_hash }}</span>
-        {% endcall %}
-        {% call data_line("Previous block hash") %}
-            {% if block.header.metadata.height == 0 %}
-                <span class="mono">{{ block.previous_hash }}</span>
-            {% else %}
-                <a href="/block?bh={{ block.previous_hash }}"><span class="mono">{{ block.previous_hash }}</span></a>
-            {% endif %}
-        {% endcall %}
-        {% call data_line("Previous state root") %}
-            <span class="mono">{{ block.header.previous_state_root }}</span>
-        {% endcall %}
-        {% call data_line("Transactions root") %}
-            <span class="mono">{{ block.header.transactions_root }}</span>
-        {% endcall %}
-        {% call data_line("Finalize root") %}
-            <span class="mono">{{ block.header.finalize_root }}</span>
-        {% endcall %}
-        {% call data_line("Ratifications root") %}
-            <span class="mono">{{ block.header.ratifications_root }}</span>
-        {% endcall %}
-        {% call data_line("Coinbase accumulator point") %}
-            <span class="mono">{{ block.header.coinbase_accumulator_point }}</span>
-        {% endcall %}
-        </div>
-
-        <div id="transactions">
-            <h4>Transactions</h4>
-            <table id="transactions-table" class="unstriped">
-                <thead>
-                <tr>
-                    <td>Index</td>
-                    <td>Transaction ID</td>
-                    <td>Type</td>
-                    <td>State</td>
-                    <td>Transitions</td>
-                    <td>Fee</td>
-                </tr>
-                </thead>
-                <tbody>
-                {% for tx in transactions %}
-                    <tr>
-                        <td>{{ tx.index }}</td>
-                        <td class="mono"><a href="/transaction?id={{ tx.tx_id }}">{{ tx.tx_id }}</a></td>
-                        <td>{{ tx.type }}</td>
-                        <td>{{ state_label(tx.state) }}</td>
-                        <td>{{ tx.transitions_count }}</td>
-                        <td>{{ tx.fee | format_aleo_credit | safe }} Aleo credits</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-
-    {% if coinbase_reward %}
-        <div id="coinbase">
-            <h4>Coinbase solutions</h4>
-            <div class="data-line grid-x grid-padding-x">
-                <div class="cell small-2 block-data-line-label">
-                    Puzzle proof
-                </div>
-                <div class="cell auto data-line-value">
-                    x: <span class="mono">{{ block.coinbase.value.proof.w.x }}</span><br>y: <span class="mono">Not implemented</span>
-                </div>
-            </div>
-            <table id="coinbase-table" class="unstriped">
-                <thead>
-                <tr>
-                    <td>Address</td>
-                    <td>Nonce</td>
-                    <td>Commitment</td>
-                    <td>Target / Total</td>
-                    <td>Reward</td>
-                </tr>
-                </thead>
-                <tbody>
-                {% for partial_solution in coinbase_solutions %}
-                <tr>
-                    <td><a href="/address?a={{ partial_solution.address }}"><span class="mono">{{ partial_solution.address_trunc }}</span></a></td>
-                    <td><span class="mono">{{ partial_solution.nonce }}</span></td>
-                    <td><span class="mono">{{ partial_solution.commitment }}</span></td>
-                    <td>{{ partial_solution.target | format_number | safe }}<span class="note"> / {{ target_sum | format_number | safe }}</span></td>
-                    <td>{{ partial_solution.reward | format_aleo_credit | safe }}</td>
-                </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-            {% if block.coinbase.value.partial_solutions | count > 100 %}
-            Showing 100 items. <a href="block_solutions?h={{ block.header.metadata.height }}">Show all</a>
-            {% endif %}
-        </div>
-    {% endif %}
-    </div>
+{% include "htmx/block.jinja2" %}
 
 {% endblock %}
