--- a/webui/templates/index.jinja2
+++ b/webui/templates/index.jinja2
@@ -4,111 +4,6 @@
 
 {% block content %}
 
-    <div class="content">
-
-        {% if "BETA" | get_env %}
-        <div id="beta">
-            <h4>This is the preview version of the explorer.</h4>
-            <p>
-                Currently, the preview version has an incomplete interpreter for Aleo instructions. All finalizers are
-                locally executed and the mapping values are independently calculated. Those values are checked with the
-                hashes on the blockchain.
-            </p>
-            <p>
-                As the interpreter still can't execute all instructions, the explorer will stop syncing when it
-                encounters a block with an instruction that it can't execute. Expect this to happen often.
-            </p>
-            {% if "DEBUG_SKIP_COINBASE" | get_env %}
-                <p>
-                    For performance reasons, this instance of the explorer won't track the coinbase solutions and the
-                    rewards of individual provers.
-                </p>
-            {% endif %}
-        </div>
-        {% endif %}
-
-        <div id="ticker">
-            <div class="grid-x grid-padding-x">
-                <div class="cell large-auto ticker-cell">
-                    <div class="grid-y ticker-cell-content">
-                        <div class="cell ticker-cell-title">Latest block</div>
-                        <div class="cell auto ticker-cell-data">{{ latest_block.header.metadata.height | format_number | safe }}</div>
-                    </div>
-                </div>
-                <div class="cell large-auto ticker-cell">
-                    <div class="grid-y ticker-cell-content">
-                        <div class="cell ticker-cell-title">Current epoch</div>
-                        <div class="cell auto ticker-cell-data">{{ latest_block.get_epoch_number() }}&nbsp;<span class="ticker-cell-data-note">{{ latest_block.header.metadata.height % 256 }} / 256</span></div>
-                    </div>
-                </div>
-                <div class="cell large-auto ticker-cell">
-                    <div class="grid-y ticker-cell-content">
-                        <div class="cell ticker-cell-title">Timestamp</div>
-                        <div class="cell auto ticker-cell-data timestamp-font-size">{{ latest_block.header.metadata.timestamp | format_time | safe }}</div>
-                    </div>
-                </div>
-                <div class="cell large-auto ticker-cell">
-                    <div class="grid-y ticker-cell-content">
-                        <div class="cell ticker-cell-title">Proof target</div>
-                        <div class="cell auto ticker-cell-data">{{ latest_block.header.metadata.proof_target | format_number | safe }}</div>
-                    </div>
-                </div>
-                <div class="cell large-auto ticker-cell">
-                    <div class="grid-y ticker-cell-content">
-                        <div class="cell ticker-cell-title">Coinbase target</div>
-                        <div class="cell auto ticker-cell-data">{{ latest_block.header.metadata.coinbase_target | format_number | safe }}</div>
-                    </div>
-                </div>
-            </div>
-            {% if not "DEBUG_SKIP_COINBASE" | get_env %}
-                <div class="grid-x grid-padding-x">
-                    <div class="cell large-auto ticker-cell">
-                        <div class="grid-y ticker-cell-content">
-                            <div class="cell ticker-cell-title">Estimated network speed (15m)</div>
-                            <div class="cell auto ticker-cell-data">{{ network_speed | format_number | safe }}&nbsp;<span data-tooltip title='commitments per second, also known as "p/s" or "s/s"'>c/s</span></div>
-                        </div>
-                    </div>
-                </div>
-            {% endif %}
-        </div>
-
-        <div id="recent-blocks">
-            <h4>Recent Blocks</h4>
-            <table class="unstriped">
-                <thead>
-                <tr>
-                    <th>Height</th>
-                    <th>Epoch</th>
-                    <th>Timestamp</th>
-                    <th>Transactions</th>
-                    <th>Proof target</th>
-                    <th>Coinbase target</th>
-                    {% if not "DEBUG_SKIP_COINBASE" | get_env %}
-                        <th>Coinbase rewards</th>
-                        <th>Coinbase solutions</th>
-                    {% endif %}
-                    <th>Validator</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for block in recent_blocks %}
-                    <tr>
-                        <td><a href="/block?h={{ block.height }}">{{ block.height | format_number | safe }}</a></td>
-                        <td>{{ block.height // 256 }} <span class="note">{{ block.height % 256 }} / 256</span></td>
-                        <td>{{ block.timestamp | format_time | safe }}</td>
-                        <td>{{ block.transaction_count }}</td>
-                        <td>{{ block.proof_target | format_number | safe }}</td>
-                        <td>{{ block.coinbase_target | format_number | safe }}</td>
-                        {% if not "DEBUG_SKIP_COINBASE" | get_env %}
-                            <td>{% if block.coinbase_reward %}{{ ((block.coinbase_reward | int) // 2) | format_aleo_credit | safe }}{% else %}-{% endif %}</td>
-                            <td>{% if block.coinbase_reward %}{{ block.partial_solution_count }}{% else %}-{% endif %}</td>
-                        {% endif %}
-                        <td>-</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-    </div>
+{% include "htmx/index.jinja2" %}
 
 {% endblock %}
