--- a/webui/templates/privacy.jinja2
+++ b/webui/templates/privacy.jinja2
@@ -4,74 +4,6 @@
 
 {% block content %}
 
-    <div class="content" style="font-size: 1rem">
-
-        <div class="header">
-            <h3>Privacy Policy</h3>
-        </div>
-
-        <p>
-            I'm not a lawyer, so I'm not going to write a legal document here. I'm just going to tell you what I do
-            with your data.
-        </p>
-
-        <p>
-            <strong>Important:</strong> When you use the explorer, your requests will appear in the web server logs
-            (non-cached part){% if ("CLOUDFLARE" | get_env) or ("PLAUSIBLE" | get_env) %} or analytics data{% endif %},
-            so there might be enough information to link different addresses together depending on your requests
-            (searches, page visits, etc.) I will not use this information against anyone or give them to anyone else,
-            nor will I actively collect and derive such information from various logs.
-        </p>
-
-        <p>
-            Depending on the code configuration, this explorer might have different analytic scripts embedded on every
-            page. Below are what's enabled on this explorer instance.
-        </p>
-
-    {% if "CLOUDFLARE" | get_env %}
-        <h4>Cloudflare</h4>
-
-        <p>
-            This site uses Cloudflare to protect the server from attacks, so all web requests go through Cloudflare's
-            CDN nodes before hitting this server. Cloudflare will collect data about those requests, so you should read
-            their policies:
-        </p>
-        <ul>
-            <li><a href="https://www.cloudflare.com/privacypolicy/">Cloudflare's Privacy Policy</a> (You are "End Users" in this document)</li>
-            <li><a href="https://www.cloudflare.com/cookie-policy/">Cloudflare's Cookie Policy</a></li>
-        </ul>
-        <p>
-            I can access aggregated request data and individual security logs to identify possible attacks and act on them.
-        </p>
-
-        <p>
-            This site also uses Cloudflare Analytics. I use the performance data and Core Web Vitals statistics to help
-            me optimize the explorer.
-        </p>
-    {% endif %}
-
-    {% if "PLAUSIBLE" | get_env %}
-        <h4>Plausible Analytics (Self-hosted)</h4>
-
-        <p>
-            This site uses a self-hosted Plausible Analytics instance. It's an open-source alternative to Google Analytics
-            and collects simple metrics. The data is open as well, so you can see what I see:
-            <a href="https://p.hamp.app/explorer.hamp.app" target="_blank">Live data</a>
-        </p>
-
-        <p>
-            To opt-out of Plausible Analytics, add domain <span class="mono">p.hamp.app</span> to your adblocker.
-        </p>
-    {% endif %}
-
-    {% if not ("CLOUDFLARE" | get_env) and not ("PLAUSIBLE" | get_env) %}
-        <p>
-            <em>There are no analytics scripts on this site.</em>
-        </p>
-    {% endif %}
-
-        <p>For more questions and suggestions about this privacy policy, please send emails to privacy@hamp.app .</p>
-
-    </div>
+{% include "htmx/privacy.jinja2" %}
 
 {% endblock %}
