--- a/webui/templates/program.jinja2
+++ b/webui/templates/program.jinja2
@@ -2,234 +2,8 @@
 
 {% block title %}Program {{ program_id }} - Haruka's Aleo Explorer{% endblock %}
 
-{% from "macros.jinja2" import data_line, data_line_safe, state_label %}
-
 {% block content %}
 
-    <div class="content">
-        <div class="header">
-            <h3>Program {{ program_id }}</h3>
-        </div>
+{% include "htmx/program.jinja2" %}
 
-        <div id="data">
-            {% call data_line("Program ID") %}
-                <span class="mono">{{ program_id }}</span>
-            {% endcall %}
-            {% call data_line("Deployment transaction") %}
-                {% if transaction_id %}
-                <span class="mono"><a href="/transaction?id={{ transaction_id }}">{{ transaction_id }}</a></span>
-                {% else %}
-                -
-                {% endif %}
-            {% endcall %}
-            {% call data_line("Program owner") %}
-                {% if owner %}
-                <span class="mono"><a href="/address?a={{ owner }}">{{ owner }}</a></span>
-                {% else %}
-                -
-                {% endif %}
-            {% endcall %}
-            {% call data_line("Owner signature") %}
-                {% if signature %}
-                <span class="mono">{{ signature }}</span>
-                {% else %}
-                -
-                {% endif %}
-            {% endcall %}
-            {% call data_line("Times called") %}
-                {{ times_called }}
-            {% endcall %}
-            {% call data_line("Similar programs") %}
-                {% if similar_count == 0 %}
-                    0
-                {% else %}
-                    <a href="/similar_programs?id={{ program_id }}">{{ similar_count }}</a>
-                {% endif %}
-            {% endcall %}
-
-            <ul class="tabs" data-tabs id="program-tabs">
-                <li class="tabs-title is-active"><a href="#structure">Program structure</a></li>
-                <li class="tabs-title"><a href="#transitions">Recent calls</a></li>
-                <li class="tabs-title"><a href="#source">Source code</a></li>
-                <li class="tabs-title"><a href="#read">Read mappings</a></li>
-                <li class="tabs-title"><a href="#execute">Execute transitions</a></li>
-            </ul>
-
-            <div class="tabs-content" data-tabs-content="program-tabs">
-                <div class="tabs-panel is-active" id="structure">
-                    {% call data_line("Imports") %}
-                        <span class="mono">
-                    {% if imports %}
-                        {% for import in imports %}
-                            <a href="/program?id={{ import }}">{{ import }}</a><br>
-                        {% endfor %}
-                    {% else %}
-                        -
-                    {% endif %}
-                    </span>
-                    {% endcall %}
-                    {% call data_line("Mappings") %}
-                        <span class="mono">
-                    {% if mappings %}
-                        {% for mapping in mappings %}
-                            {{ mapping.name }} ({{ mapping.key_type }} -> {{ mapping.value_type }})<br>
-                        {% endfor %}
-                    {% else %}
-                        -
-                    {% endif %}
-                    </span>
-                    {% endcall %}
-                    {% call data_line("Structs") %}
-                        <span class="mono">
-                    {% if structs %}
-                        {% for struct in structs %}
-                            {{ struct }}<br>
-                        {% endfor %}
-                    {% else %}
-                        -
-                    {% endif %}
-                    </span>
-                    {% endcall %}
-                    {% call data_line("Records") %}
-                        <span class="mono">
-                    {% if records %}
-                        {% for record in records %}
-                            {{ record }}<br>
-                        {% endfor %}
-                    {% else %}
-                        -
-                    {% endif %}
-                    </span>
-                    {% endcall %}
-                    {% call data_line("Functions") %}
-                        <span class="mono">
-                    {% if closures %}
-                        {% for function in closures %}
-                            {{ function }}<br>
-                        {% endfor %}
-                    {% else %}
-                        -
-                    {% endif %}
-                    </span>
-                    {% endcall %}
-                    {% call data_line("Transitions") %}
-                        <span class="mono">
-                    {% for transition in functions %}
-                        {{ transition }}<br>
-                    {% endfor %}
-                    </span>
-                    {% endcall %}
-                </div>
-
-                <div class="tabs-panel" id="source">
-                    {% if has_leo_source %}
-                        Program Source Code (Leo)
-                    {% else %}
-                        Program Source Code (Aleo Instruction)
-                        <a href="/upload_source?id={{ program_id }}">Upload Leo source</a>
-                    {% endif %}
-                    <br><br>
-                    <pre>{{ source }}</pre>
-                </div>
-
-                <div class="tabs-panel" id="transitions">
-                    <table id="transitions-table" class="unstriped">
-                        <thead>
-                        <tr>
-                            <td>Block height</td>
-                            <td>Timestamp</td>
-                            <td>Transition ID</td>
-                            <td>Function call</td>
-                            <td>State</td>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for call in recent_calls %}
-                            <tr>
-                                <td><a href="/block?h={{ call.height }}">{{ call.height | format_number | safe }}</a></td>
-                                <td>{{ call.timestamp | format_time | safe }}</td>
-                                <td><span class="mono"><a href="/transition?id={{ call.transition_id }}">{{ call.transition_id }}</a></span></td>
-                                <td><span class="mono">{{ call.function_name }}</span></td>
-                                <td>{{ state_label(call.type.rstrip("Execute")) }}</td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-
-                <div class="tabs-panel" id="read">
-                    {% if not mappings %}
-                        Program has no mappings.
-                    {% else %}
-                        <div style="overflow: auto">
-                            <span style="float: right"><em><a href="{{ "API_DOC_ROOT" | get_env }}" target="_blank">API docs & quota</a></em></span>
-                        </div>
-                        {% for mapping in mappings %}
-                            <form data-mapping="{{ mapping.name }}" action="#">
-                                <label>
-                                    <span class="mono">{{ mapping.name }} ({{ mapping.key_type }} -> {{ mapping.value_type }})</span>
-                                    <input class="mono" type="text" id="mapping-{{ mapping.name }}-input" placeholder="{{ mapping.key_type }}" />
-                                </label>
-                                <input type="submit" class="button mapping-read-submit" value="Read" />
-                            </form>
-                            <span class="mono" id="mapping-{{ mapping.name }}-value"></span>
-                            <br><br>
-                        {% endfor %}
-                    {% endif %}
-                </div>
-
-                <div class="tabs-panel" id="execute">
-                    <h6>Not implemented</h6>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-{% endblock %}
-
-{% block content_script %}
-<script>
-    const reads = document.getElementsByClassName("mapping-read-submit")
-    for (let button of reads) {
-        button.addEventListener("click", read_mapping)
-    }
-
-    async function read_mapping(e) {
-        e.preventDefault()
-
-        const button = e.target
-        button.disabled = true
-        button.value = "Loading..."
-
-        const form = button.parentElement
-        const mapping = form.dataset.mapping
-
-        const input = document.getElementById(`mapping-${mapping}-input`)
-        const value = document.getElementById(`mapping-${mapping}-value`)
-
-        if (input.value === "") {
-            value.innerText = "Key cannot be empty"
-            button.disabled = false
-            button.value = "Read"
-            return
-        }
-
-        try {
-            const response = await fetch(`{{ "API_ROOT" | get_env }}/v1/mapping/get_value/{{ program_id }}/${mapping}/${input.value}`)
-            const data = await response.json()
-            if (!response.ok) {
-                value.innerText = "Error loading data: " + data.error
-            } else if (data == null) {
-                value.innerText = "Key not found"
-            } else {
-                value.innerText = data
-            }
-        } catch (e) {
-            value.innerText = "Error fetching data: " + e
-        }
-        button.disabled = false
-        button.value = "Read"
-    }
-</script>
 {% endblock %}
