--- a/webui/templates/transaction.jinja2
+++ b/webui/templates/transaction.jinja2
@@ -2,133 +2,8 @@
 
 {% block title %}Transaction {{ tx_id_trunc }} - Haruka's Aleo Explorer{% endblock %}
 
-{% from "macros.jinja2" import data_line, sub_data_line, state_label_with_reason %}
-
 {% block content %}
 
-    <div class="content">
-        <div class="header">
-            <h3>Transaction {{ tx_id_trunc }}</h3>
-        </div>
-
-        <div id="data">
-            {% call data_line("Transaction ID") %}
-                <span class="mono">{{ tx_id }}</span>
-            {% endcall %}
-            {% call data_line("Block") %}
-                <a href="/block?h={{ block.header.metadata.height }}">{{ block.header.metadata.height | format_number | safe }}</a>
-            {% endcall %}
-            {% call data_line("Index") %}
-                {{ index }}
-            {% endcall %}
-            {% call data_line("Type") %}
-                {{ type }}
-            {% endcall %}
-            {% call data_line("State") %}
-                {{ state_label_with_reason(state, reject_reason) }}
-            {% endcall %}
-            {% if type == "Execute" %}
-                {% call data_line("Global state root") %}
-                <span class="mono">{{ global_state_root }}</span>
-                {% endcall %}
-                {% call data_line("Proof") %}
-                    {% if proof %}
-                        <advanced-link scope="transaction" object="{{ tx_id }}" type="proof">
-                            <span class="mono">{{ proof_trunc }}</span>
-                        </advanced-link>
-                    {% else %}
-                        -
-                    {% endif %}
-                {% endcall %}
-            {% elif type == "Deploy" %}
-                {% call data_line("Edition") %}
-                    {{ edition }}
-                {% endcall %}
-                {% call data_line("Deployed program ID") %}
-                    <a href="/program?id={{ program_id }}"><span class="mono">{{ program_id }}</span></a>
-                {% endcall %}
-            {% endif %}
-            {% call data_line("Total fee") %}
-                {{ total_fee | format_aleo_credit | safe }} Aleo credits
-            {% endcall %}
-            {% if type == "Execute" %}
-                {% call sub_data_line("Breakdown") %}
-                    <span class="box-drawing">├</span> Storage fee: {{ storage_cost | format_aleo_credit | safe }}<br>
-                    <span class="box-drawing">├</span> Finalize fee: {{ finalize_costs | sum | format_aleo_credit | safe }}<br>
-                    {% for cost in finalize_costs %}
-                        <span class="box-drawing">│{% if loop.revindex0 == 0 %}└{% else %}├{% endif %}</span> Transition #{{ loop.index0 }}: {{ cost | format_aleo_credit | safe }}<br>
-                    {% endfor %}
-                    <span class="box-drawing">└</span> Priority fee: {{ priority_fee | format_aleo_credit | safe }}
-                {% endcall %}
-            {% elif type == "Deploy" %}
-                {% call sub_data_line("Breakdown") %}
-                    <span class="box-drawing">├</span> Storage fee: {{ storage_cost | format_aleo_credit | safe }}<br>
-                    <span class="box-drawing">├</span> Namespace fee: {{ namespace_cost | format_aleo_credit | safe }}<br>
-                    <span class="box-drawing">└</span> Priority fee: {{ priority_fee | format_aleo_credit | safe }}
-                {% endcall %}
-            {% endif %}
-        </div>
-
-        <div id="transitions">
-            <h4>{% if type == "Deploy" %}Fee transition{% else %}Transitions{% endif %}</h4>
-            <table id="transitions-table" class="unstriped">
-                <thead>
-                <tr>
-                    <td>Index</td>
-                    <td>Transition ID</td>
-                    <td>Program / Function call</td>
-                </tr>
-                </thead>
-                <tbody>
-                {% for transition in transitions %}
-                    <tr>
-                        <td>{{ loop.index0 }}</td>
-                        <td>
-                            <span class="mono"><a href="/transition?id={{ transition.transition_id }}">{{ transition.transition_id }}</a></span>
-                        </td>
-                        <td><span class="mono">{{ transition.action }}</span></td>
-                    </tr>
-                {% endfor %}
-                {% if fee_transition %}
-                    <tr>
-                        <td>Fee</td>
-                        <td>
-                            <span class="mono"><a href="/transition?id={{ fee_transition.transition_id }}">{{ fee_transition.transition_id }}</a></span>
-                        </td>
-                        <td><span class="mono">{{ fee_transition.action }}</span></td>
-                    </tr>
-                {% endif %}
-                </tbody>
-            </table>
-        </div>
-
-        {% if state == "Rejected" %}
-            <div id="rejected-transitions">
-                <h4>Rejected Transitions</h4>
-                <table id="transitions-table" class="unstriped">
-                    <thead>
-                    <tr>
-                        <td>Index</td>
-                        <td>Transition ID</td>
-                        <td>Program / Function call</td>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for transition in rejected_transitions %}
-                        <tr>
-                            <td>{{ loop.index0 }}</td>
-                            <td>
-                                <span class="mono"><a href="/transition?id={{ transition.transition_id }}">{{ transition.transition_id }}</a></span>
-                            </td>
-                            <td><span class="mono">{{ transition.action }}</span></td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        {% endif %}
-
-
-    </div>
+{% include "htmx/transaction.jinja2" %}
 
 {% endblock %}
